[gd_scene load_steps=9 format=1]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/bgfruitninja.jpg" type="Texture" id=2]
[ext_resource path="res://Scripts/InputCorte.gd" type="Script" id=3]
[ext_resource path="res://assets/hud_vidas.png" type="Texture" id=4]
[ext_resource path="res://assets/fonte150.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/bomb100.png" type="Texture" id=6]

[sub_resource type="GDScript" id=2]

resource/name = "GameOver"
script/source = "extends Control

var restart = false

func _ready():
	set_process_input(true)

func _input(event):
	if event.type == InputEvent.SCREEN_TOUCH and restart:
		get_tree().reload_current_scene()

func start():
	show()
	get_node(\"Anim\").play(\"GameOver\")
	get_node(\"Timer\").start()
	

func _on_Timer_timeout():
	restart = true;
	get_node(\"Label 2\").show()"

[sub_resource type="Animation" id=1]

resource/name = "GameOver"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label 2:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 2 )
centered = false

[node name="Frutas" type="Node2D" parent="."]

[node name="GeradorFrutas" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="Input" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 3 )

[node name="IntervaloRaycast" type="Timer" parent="Input"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false

[node name="LimiteCorte" type="Timer" parent="Input"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TextureFrame" type="TextureFrame" parent="Control"]

rect/scale = Vector2( 0.4, 0.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 38.0
margin/right = 323.0
margin/bottom = 354.0
texture = ExtResource( 4 )
stretch_mode = 5

[node name="Label" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 182.0
margin/top = 46.0
margin/right = 261.0
margin/bottom = 176.0
custom_fonts/font = ExtResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bomba1" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 919.0
margin/top = 23.0
margin/right = 1019.0
margin/bottom = 123.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Bomba2" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1019.0
margin/top = 23.0
margin/right = 1119.0
margin/bottom = 123.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Bomba3" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1119.0
margin/top = 23.0
margin/right = 1219.0
margin/bottom = 123.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="GameOver" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = SubResource( 2 )

[node name="Label" type="Label" parent="GameOver"]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 294.0
margin/top = 303.0
margin/right = 1020.0
margin/bottom = 433.0
custom_fonts/font = ExtResource( 5 )
text = "Game Over"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="GameOver"]

visibility/visible = false
visibility/opacity = 0.0
rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 355.0
margin/top = 488.0
margin/right = 2410.0
margin/bottom = 618.0
custom_fonts/font = ExtResource( 5 )
text = "Toque para jogar novamente"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Anim" type="AnimationPlayer" parent="GameOver"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/GameOver = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="GameOver"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="GeradorFrutas" to="." method="_on_GeradorFrutas_timeout"]

[connection signal="timeout" from="Input/IntervaloRaycast" to="Input" method="_on_IntevaloRaycast_timeout"]

[connection signal="timeout" from="Input/LimiteCorte" to="Input" method="_on_LimiteCorte_timeout"]

[connection signal="timeout" from="GameOver/Timer" to="GameOver" method="_on_Timer_timeout"]


