[gd_scene load_steps=12 format=1]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/img_fundoChao.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Felpudo.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudoIdle.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudoBate.png" type="Texture" id=5]
[ext_resource path="res://assets/grave.png" type="Texture" id=6]
[ext_resource path="res://Scripts/BarraVida.gd" type="Script" id=7]
[ext_resource path="res://assets/barra_recipiente.png" type="Texture" id=8]
[ext_resource path="res://assets/barra.png" type="Texture" id=9]
[ext_resource path="res://assets/font140.fnt" type="BitmapFont" id=10]

[sub_resource type="Animation" id=1]

resource/name = "Bater"
length = 0.15
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Batendo:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="MainNode" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( -299.784, -56.9218 )
transform/scale = Vector2( 1.51078, 2.11974 )
texture = ExtResource( 2 )
centered = false

[node name="Felpudo" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 220, 1070 )
z/z = 1
script/script = ExtResource( 3 )

[node name="Idle" type="Sprite" parent="Felpudo"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Batendo" type="Sprite" parent="Felpudo"]

visibility/visible = false
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Grave" type="Sprite" parent="Felpudo"]

visibility/visible = false
transform/pos = Vector2( 5.55182, 35.1617 )
transform/scale = Vector2( 0.2075, 0.1454 )
texture = ExtResource( 6 )
modulate = Color( 0.345098, 0.698039, 0.172549, 1 )

[node name="Anim" type="AnimationPlayer" parent="Felpudo"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Bater = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Camera" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Barris" type="Node2D" parent="."]

[node name="DestrBarris" type="Node2D" parent="."]

[node name="BarraVida" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 360, 100 )
transform/scale = Vector2( 2, 2 )
script/script = ExtResource( 7 )

[node name="Caixa" type="Sprite" parent="BarraVida"]

texture = ExtResource( 8 )

[node name="Vida" type="Sprite" parent="BarraVida"]

texture = ExtResource( 9 )
region = true
region_rect = Rect2( 0, 0, 188, 23 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Pontos" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 145.0
margin/top = 120.0
margin/right = 550.0
margin/bottom = 271.0
custom_fonts/font = ExtResource( 10 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


